--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "d3-geo-projection": "^4.0.0",
     "intersection-observer": "^0.12.2",
     "react-is-visible": "^1.2.0",
+    "react-markdown": "^8.0.7",
     "topojson-client": "^3.1.0"
   }
 }
